--- a/src/hw02/q02.css
+++ b/src/hw02/q02.css
@@ -4,6 +4,7 @@
   background-color: red;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-2 {
@@ -12,6 +13,7 @@
   background-color: blue;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-3 {
@@ -20,6 +22,7 @@
   background-color: lightgreen;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-4 {
@@ -28,6 +31,7 @@
   background-color: black;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-5 {
@@ -36,6 +40,7 @@
   background-color: orange;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-6 {
@@ -44,6 +49,7 @@
   background-color: brown;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-7 {
@@ -52,6 +58,7 @@
   background-color: green;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-8 {
@@ -60,6 +67,7 @@
   background-color: aqua;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .container-9 {
@@ -68,7 +76,14 @@
   background-color: aquamarine;
   color: white;
   text-align: center;
+  margin: 5px
 }
 
 .parent {
+  display: grid;
+  grid-template-columns: repeat(3,100px);
+  grid-auto-rows: 100px;
+  grid-gap:10px;
+  width: 340px;
+  justify-content: space-evenly;
 }  
